# asl_gestures

./: .gitattributes  .gitignore  app.py  data.py  hand_landmarks_augment.csv  pyproject.toml  requirements.txt
sources/: label_encoder_augment.pkl  model_landmarks_augment.pkl
